--- a/index.html
+++ b/index.html
@@ -8,9 +8,18 @@
     <link rel="stylesheet" href="style.css" type="text/css">
 </head>
 <body>
-    <h4>Цвет в CSS</h4>
+    <h4 id="color_text">Цвет в CSS</h4>
     <div title="Цвет в CSS">
-
+        <div class="color_text" title="Цвет текста">
+            <p>Цвет текста</p>
+        </div>
+        <div class="color_fon" title="Цвет фона">
+            <p>Цвет фона</p>
+        </div>
+        <div class="color_border" title="Цвет границы">
+            <p>Цвет границы</p>
+        </div>
     </div>
+
 </body>
 </html>
