Fonts style in CSS

--- a/index.html
+++ b/index.html
@@ -20,6 +20,24 @@
             <p>Цвет границы</p>
         </div>
     </div>
+    <h4>Стилизация шрифтов</h4>
+    <div class="font" title="Стилизация шрифтов">
+        Стилизация шрифтов
+        <p>Стилизация шрифтов</p>
+    </div>
+    <div title="Толщина шрифта">
+        <p class="font_weight_bold">Толщина шрифта</p>
+        <p class="font_weight_normal">Толщина шрифта</p>
+    </div>
+    <div>
+        <p title="italic" class="italic">Курсив</p>
+
+    </div>
+
+
+
+
+
 
 </body>
 </html>
