Fonts download style in CSS

--- a/index.html
+++ b/index.html
@@ -29,11 +29,17 @@
         <p class="font_weight_bold">Толщина шрифта</p>
         <p class="font_weight_normal">Толщина шрифта</p>
     </div>
-    <div>
+    <div title="Курсив">
         <p title="italic" class="italic">Курсив</p>
-
+    </div>
+    <h4>Внешние шрифты</h4>
+    <div class="outside_fonts" title="Внешние шрифты">
+        <p><a href="">Применение внешнего шрифта</a></p>
     </div>
 
+    <div class="Download_font" title="Скачанный шрифт">
+        <p>Подключение скачанного шрифта</p>
+    </div>
 
 
 
