--- a/index.html
+++ b/index.html
@@ -43,7 +43,39 @@
     <div class="font_size" title="font-size">
         <p>Однажды в студеную зимнюю пору</p>
     </div>
+    <h5>Форматирование текста</h5>
+    <div class="text_transform" title="text-transform">
+        <p><i>Изменение регистра</i></p>
+        <p class="capotalize">Текст использует значение capitalize</p>
+        <p class="lowercase">Текст использует значение lowercase</p>
+        <p class="uppercase">Текст использует значение uppercase</p>
 
+
+
+    </div>
+    <div class="text_decoration" title="text-decoration">
+        <p>Свойство text-decoration</p>
+        <p class="under">Это подчеркнутый текст</p>
+        <p class="over">Это надчеркнутый текст</p>
+        <p class="line">Это зачеркнутый текст</p>
+        <p class="mixed">Это подчеркнутый и зачеркнутый текст</p>
+        <p>Не подчеркнутая <a href="index.php" class="none">Ссылка</a></p>
+    </div>
+    <div class="spacing" title="spacing">
+        <h3>Обычный текст</h3>
+        <p>Над ним не было ничего уже, кроме неба..</p>
+        <h3>letter-spacing: -1px;</h3>
+        <p class="smallLetterSpace">Над ним не было ничего уже, кроме неба...</p>
+        <h3>letter-spacing: 1px;</h3>
+        <p class="bigLetterSpace">Над ним не было ничего уже, кроме неба...</p>
+        <h3>word-spacing: -1px;</h3>
+        <p class="smallWordSpace">Над ним не было ничего уже, кроме неба...</p>
+        <h3>word-spacing: 1px;</h3>
+        <p class="bigWordSpace">Над ним не было ничего уже, кроме неба...</p>
+    </div>
+    <div class="text_shadow" title="text-shadow">
+        <h1>Текстовые тени</h1>
+    </div>
 
 
 
