Paragraph styling in CSS

--- a/index.html
+++ b/index.html
@@ -76,8 +76,59 @@
     <div class="text_shadow" title="text-shadow">
         <h1>Текстовые тени</h1>
     </div>
+    <h5>Стилизация абзацев</h5>
+    <div class="Paragraph_styling" title="Стилизация абзацев">
+        <h4>Межстрочный интервал</h4>
+        <p class="line_height_100">
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci asperiores aut blanditiis consectetur,
+            corporis debitis eaque error esse illo, ipsum mollitia obcaecati pariatur, perspiciatis quam quibusdam
+            sed sit vel voluptatem.
+        </p>
+        <p class="line_height_150">
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci asperiores aut blanditiis consectetur,
+            corporis debitis eaque error esse illo, ipsum mollitia obcaecati pariatur, perspiciatis quam quibusdam
+            sed sit vel voluptatem.
+        </p>
+        <p class="line_height_200">
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci asperiores aut blanditiis consectetur,
+            corporis debitis eaque error esse illo, ipsum mollitia obcaecati pariatur, perspiciatis quam quibusdam
+            sed sit vel voluptatem.
+        </p>
 
-
+    </div>
+    <div class="Text_alignment" title="text-align">
+        <h4 class="text_align_lef">text-align:left</h4>
+        <p>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci asperiores aut blanditiis consectetur,
+            corporis debitis eaque error esse illo, ipsum mollitia obcaecati pariatur, perspiciatis quam quibusdam
+            sed sit vel voluptatem.
+        </p>
+        <h4>text-align:right</h4>
+        <p class="text_align_right">
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci asperiores aut blanditiis consectetur,
+            corporis debitis eaque error esse illo, ipsum mollitia obcaecati pariatur, perspiciatis quam quibusdam
+            sed sit vel voluptatem.
+        </p>
+        <h4>text-align: center</h4>
+        <p class="text_align_center">
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci asperiores aut blanditiis consectetur,
+            corporis debitis eaque error esse illo, ipsum mollitia obcaecati pariatur, perspiciatis quam quibusdam
+            sed sit vel voluptatem.
+        </p>
+        <h4>text-align: justify</h4>
+        <p class="text_align_justify">
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci asperiores aut blanditiis consectetur,
+            corporis debitis eaque error esse illo, ipsum mollitia obcaecati pariatur, perspiciatis quam quibusdam
+            sed sit vel voluptatem.
+        </p>
+        <h4>text-indent:</h4>
+        <p>Задает отступ первой строки абзаца</p>
+        <p class="text_indent">
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci asperiores aut blanditiis consectetur,
+            corporis debitis eaque error esse illo, ipsum mollitia obcaecati pariatur, perspiciatis quam quibusdam
+            sed sit vel voluptatem.
+        </p>
+    </div>
 
 
 </body>
