List Styling in CSS3

--- a/index.html
+++ b/index.html
@@ -129,7 +129,51 @@
             sed sit vel voluptatem.
         </p>
     </div>
+    <h5>Стилизация списков</h5>
+    <div class="list_style_type" title="list-style-type">
+        <h5>Обозначение списков</h5>
+        <table >
+            <tr><th>disc</th><th>circle</th><th>square</th></tr>
+            <tr><td title="disc"><ul class="disc"><li> Элемент 1</li><li> Элемент 2</li><li> Элемент 3</li></ul></td>
+                <td title="circle"><ul class="circle"><li> Элемент 1</li><li> Элемент 2</li><li> Элемент 3</li></ul></td>
+                <td title="square"><ul class="square"><li> Элемент 1</li><li> Элемент 2</li><li> Элемент 3</li></ul></td>
+            </tr>
+            <tr><th>decimal</th><th>decimal-leading-zero</th><th>lower-roman</th></tr>
+            <tr><td title="decimal"><ul class="decimal"><li> Элемент 1</li><li> Элемент 2</li><li> Элемент 3</li></ul></td>
+                <td title="decimal-leading-zero"><ul class="decimal-leading-zero"><li> Элемент 1</li><li> Элемент 2</li><li> Элемент 3</li></ul></td>
+                <td title="lower-roman"><ul class="lower-roman"><li> Элемент 1</li><li> Элемент 2</li><li> Элемент 3</li></ul></td>
+            </tr>
+            <tr><th>upper-roman</th><th>lower-alpha</th><th>upper-alpha</th></tr>
+            <tr><td title="upper-roman"><ul class="upper-roman"><li> Элемент 1</li><li> Элемент 2</li><li> Элемент 3</li></ul></td>
+                <td title="lower-alpha"><ul class="lower-alpha"><li> Элемент 1</li><li> Элемент 2</li><li> Элемент 3</li></ul></td>
+                <td title="upper-alpha"><ul class="upper-alpha"><li> Элемент 1</li><li> Элемент 2</li><li> Элемент 3</li></ul></td>
+            </tr>
+        </table>
 
 
+
+
+    </div>
+    <div class="list_style_position" title="list_style_position">
+        <h5>Позиционирование маркеров</h5>
+        <h4>inside</h4>
+        <ul class="inside">
+            <li>Он стал прислушиваться и услыхал звуки приближающегося топота лошадей и звуки голосов...</li>
+            <li>Он стал прислушиваться и услыхал звуки приближающегося топота лошадей и звуки голосов...</li>
+        </ul>
+        <h4>outside</h4>
+        <ul class="outside">
+            <li>Он стал прислушиваться и услыхал звуки приближающегося топота лошадей и звуки голосов...</li>
+            <li>Он стал прислушиваться и услыхал звуки приближающегося топота лошадей и звуки голосов...</li>
+        </ul>
+    </div>
+    <div class="list_style_image" title="list_style_image">
+        <ul class="list_style_image">
+            <li>iPhone 6S</li>
+            <li>Galaxy S7</li>
+            <li>Nexus 5X</li>
+            <li>Lumia 950</li>
+        </ul>
+    </div>
 </body>
 </html>
