Tablr styling in CSS3

--- a/index.html
+++ b/index.html
@@ -175,5 +175,72 @@
             <li>Lumia 950</li>
         </ul>
     </div>
+    <h5>Стилизация таблиц</h5>
+    <div class="Table_styling">
+        <h4>Граница между ячейками</h4>
+        <h4>Collapse</h4>
+        <table class="collapsed" title="collapsed">
+            <tr><th>Модель</th><th>Производитель</th><th>Цена</th></tr>
+            <tr><td>Lumia 950</td><td>Microsoft</td><td>29900</td></tr>
+            <tr><td>iPhone 6S</td><td>Apple</td><td>52900</td></tr>
+            <tr><td>Nexus 6P</td><td>Huawei</td><td>49000</td></tr>
+        </table>
+        <h4>Separate</h4>
+        <table class="Separate" title="Separate">
+            <tr><th>Модель</th><th>Производитель</th><th>Цена</th></tr>
+            <tr><td>Lumia 950</td><td>Microsoft</td><td>29900</td></tr>
+            <tr><td>iPhone 6S</td><td>Apple</td><td>52900</td></tr>
+            <tr><td>Nexus 6P</td><td>Huawei</td><td>49000</td></tr>
+        </table>
+        <H4>Пустые ячейки</H4>
+        <h4>Show</h4>
+        <table>
+            <tr><th>Модель</th><th>Производитель</th><th>Цена</th></tr>
+            <tr><td>Lumia 950</td><td>Microsoft</td><td>29900</td></tr>
+            <tr><td>iPhone 6S</td><td></td><td></td></tr>
+            <tr><td>Nexus 6P</td><td>Huawei</td><td>49000</td></tr>
+        </table>
+        <h4>Hide</h4>
+        <table class="hidden-empty-cells" title="empty-cells: hide;">
+            <tr><th>Модель</th><th>Производитель</th><th>Цена</th></tr>
+            <tr><td>Lumia 950</td><td>Microsoft</td><td>29900</td></tr>
+            <tr><td>iPhone 6S</td><td></td><td></td></tr>
+            <tr><td>Nexus 6P</td><td>Huawei</td><td>49000</td></tr>
+        </table>
+        <h4>Позиционирование заголовка</h4>
+        <h4>Top</h4>
+        <table>
+            <caption>Флагманы 2015 года</caption>
+            <tr><th>Модель</th><th>Производитель</th><th>Цена</th></tr>
+            <tr><td>Lumia 950</td><td>Microsoft</td><td>29900</td></tr>
+            <tr><td>iPhone 6S</td><td>Apple</td><td>52900</td></tr>
+            <tr><td>Nexus 6P</td><td>Huawei</td><td>49000</td></tr>
+        </table>
+        <h4>Bottom</h4>
+        <table class="captionBottom" title="caption-side: bottom;">
+            <caption>Новинки 2016 года</caption>
+            <tr><th>Модель</th><th>Производитель</th><th>Цена</th></tr>
+            <tr><td>G 5</td><td>LG</td><td>44900</td></tr>
+            <tr><td>HTC 10</td><td>HTC</td><td>49900</td></tr>
+            <tr><td>iPhone SE</td><td>Apple</td><td>37000</td></tr>
+        </table>
+        <h4>Управление размером таблицы</h4>
+        <table>
+
+        </table>
+
+
+
+
+
+    </div>
+
+
+
+
+
+
+
 </body>
+
 </html>
