--- a/index.html
+++ b/index.html
@@ -225,12 +225,19 @@
             <tr><td>iPhone SE</td><td>Apple</td><td>37000</td></tr>
         </table>
         <h4>Управление размером таблицы</h4>
-        <table>
-
+        <table class="table_layout" title="table-layout">
+            <tr><th>Модель</th><th>Производитель</th><th>Цена</th></tr>
+            <tr><td>Lumia 950</td><td>Microsoft</td><td>29900</td></tr>
+            <tr><td>iPhone 6S</td><td></td><td></td></tr>
+            <tr><td>Nexus 6P</td><td>Huawei</td><td>49000</td></tr>
         </table>
-
-
-
+        <h4>Вертикальное выравнивание ячеек</h4>
+        <table class="vertical_align" title="table-layout">
+            <tr><th>Модель</th><th>Производитель</th><th>Цена</th></tr>
+            <tr><td>Lumia 950 Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequuntur, sapiente?</td><td class="top">Microsoft</td><td>29900</td></tr>
+            <tr><td>iPhone 6S Lorem ipsum dolor sit amet, consectetur adipisicing elit. Debitis, quas.</td><td class="baseline">Apple Lorem ipsum dolor sit amet.</td><td>52900</td></tr>
+            <tr><td>Nexus 6P Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cupiditate, vel!</td><td class="bottom">Huawei</td><td>49000</td></tr>
+        </table>
 
 
     </div>
