--- a/index.html
+++ b/index.html
@@ -238,8 +238,15 @@
             <tr><td>iPhone 6S Lorem ipsum dolor sit amet, consectetur adipisicing elit. Debitis, quas.</td><td class="baseline">Apple Lorem ipsum dolor sit amet.</td><td>52900</td></tr>
             <tr><td>Nexus 6P Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cupiditate, vel!</td><td class="bottom">Huawei</td><td>49000</td></tr>
         </table>
-
-
+    </div>
+    <h4>Блочная модель</h4>
+    <div class="block_model" title="Блочная модель">
+        <div class="block">
+            <p>Первый блок</p>
+        </div>
+        <div class="block">
+            <p>Второй блок</p>
+        </div>
     </div>
 
 
