Margins in CSS3

--- a/index.html
+++ b/index.html
@@ -248,6 +248,18 @@
             <p>Второй блок</p>
         </div>
     </div>
+    <h5>Внешние отступы</h5>
+    <div title="margin" class="margin">
+        <div>
+            <p>Первый блок</p>
+        </div>
+        <div>
+            <p>Второй блок</p>
+        </div>
+        <div>
+            <p>Третий блок</p>
+        </div>
+    </div>
 
 
 
