--- a/index.html
+++ b/index.html
@@ -260,7 +260,11 @@
             <p>Третий блок</p>
         </div>
     </div>
-
+    <h5>Внутренние отступы</h5>
+    <div class="outer">
+        <div class="inner">
+        </div>
+    </div>
 
 
 
