--- a/index.html
+++ b/index.html
@@ -261,11 +261,18 @@
         </div>
     </div>
     <h5>Внутренние отступы</h5>
-    <div class="outer">
+    <div class="outer" title="padding">
         <div class="inner">
         </div>
     </div>
-
+    <h5>Границы</h5>
+    <div class="border" title="border">
+        <table>
+            <tr><td><div class="solid"><p>solid</p></div></td><td><div class="dashed"><p>dashed</p></div></td><td><div class="dotted"><p>dotted</p></div></td></tr>
+            <tr><td><div class="dotted"><p>dotted</p></div></td><td><div class="double"><p>double</p></div></td><td><div class="inset"><p>inset</p></div></td></tr>
+            <tr><td><div class="outset"><p>outset</p></div></td><td><div class="ridge"><p>ridge</p></div></td><td><div class="groove"><p>groove</p></div></td></tr>
+        </table>
+    </div>
 
 
 
