Element dimensions in CSS3

--- a/index.html
+++ b/index.html
@@ -273,8 +273,15 @@
             <tr><td><div class="outset"><p>outset</p></div></td><td><div class="ridge"><p>ridge</p></div></td><td><div class="groove"><p>groove</p></div></td></tr>
         </table>
     </div>
-
-
+    <h5>Размеры элементов</h5>
+    <div class="Element_dimensions" title="Element dimensions">
+        <div class="outer1">
+            <div class="inner1"></div>
+        </div>
+    </div>
+    <div class="outer2">
+        Определение фактического размера в CSS 3
+    </div>
 
 
 
