--- a/index.html
+++ b/index.html
@@ -276,13 +276,25 @@
     <h5>Размеры элементов</h5>
     <div class="Element_dimensions" title="Element dimensions">
         <div class="outer1">
-            <div class="inner1"></div>
+            <div class="inner1"><p>Какашка</p></div>
         </div>
     </div>
     <div class="outer2">
         Определение фактического размера в CSS 3
     </div>
+    <h4>Фон элемента</h4>
+    <div class="Element_background" title="Element background">
+        <h5>Размер изображения</h5>
+        <div title="background-size">
+            <div class="colored">Первый блок</div>
+            <div class="imaged">Второй блок</div>
+        </div>
+        <h5>Позиция изображения</h5>
+        <div class="Image_position" title="background-position">Туман начинал расходиться, и неопределенно, верстах в двух расстояния, виднелись уже неприятельские
+            войска на противоположных возвышенностях...
+        </div>
 
+    </div>
 
 
 </body>
