Background-clip in CSS3

--- a/index.html
+++ b/index.html
@@ -290,10 +290,35 @@
             <div class="imaged">Второй блок</div>
         </div>
         <h5>Позиция изображения</h5>
-        <div class="Image_position" title="background-position">Туман начинал расходиться, и неопределенно, верстах в двух расстояния, виднелись уже неприятельские
-            войска на противоположных возвышенностях...
+        <div class="Image_position" title="background-position">Туман начинал расходиться, и неопределенно, верстах в двух расстояния,
+            виднелись уже неприятельские войска на противоположных возвышенностях... Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+            Accusamus aliquam deserunt dolor eaque est illo incidunt, minima modi mollitia nihil numquam odit quo, rem sunt tempore vitae voluptates?
+            Aspernatur assumenda blanditiis consequuntur delectus deleniti eum eveniet ex exercitationem impedit magnam obcaecati odio quae quas quo,
+            rerum similique velit! Adipisci, consequatur delectus dolore doloribus esse ipsam numquam, pariatur perferendis qui temporibus veritatis
+            voluptates? Accusantium autem, ducimus ea earum facilis id maiores modi placeat qui ut. Blanditiis debitis nesciunt nobis quaerat sed.
         </div>
-
+        <div class="background_origin">
+            <div class="borderBox">
+                Вся власть - TESLA!
+            </div>
+            <div class="paddingBox">
+                Вся власть - TESLA!
+            </div>
+            <div  class="contentBox">
+                Вся власть - TESLA!
+            </div>
+        </div>
+        <div class="background_clip" title="background-clip">
+            <div class="borderBox1">
+                Вся власть - TESLA!
+            </div>
+            <div class="paddingBox1">
+                Вся власть - TESLA!
+            </div>
+            <div  class="contentBox1">
+                Вся власть - TESLA!
+            </div>
+        </div>
     </div>
 
 
