Creating shadows on an element in CSS3

--- a/index.html
+++ b/index.html
@@ -320,7 +320,10 @@
             </div>
         </div>
     </div>
-
+    <h4>Создание тени у элемента</h4>
+    <div class="box_shadow" title="box-shadow">
+         <div></div>
+    </div>
 
 </body>
 
