Outline element in CSS3

--- a/index.html
+++ b/index.html
@@ -324,7 +324,12 @@
     <div class="box_shadow" title="box-shadow">
          <div></div>
     </div>
-
+    <h4>Контуры элементов</h4>
+    <div title="outline" class="outline">
+        <div>
+            <p style="margin: 10px">Контур в CSS3</p>
+        </div>
+    </div>
 </body>
 
 </html>
