Scrolling through elements in CSS3

--- a/index.html
+++ b/index.html
@@ -330,6 +330,40 @@
             <p style="margin: 10px">Контур в CSS3</p>
         </div>
     </div>
+    <h5>Обтекание элементов</h5>
+    <div title="float" class="float">
+        <div class="sidebar">Л. Толстой. Война и мир. Том второй. Часть третья</div>
+        <img src="image/tesla.jpg" alt="tesla" width="350px" height="250px" class="image">
+        <p>Старый дуб, весь преображенный, раскинувшись шатром сочной, темной зелени, млел,
+            чуть колыхаясь в лучах вечернего солнца...</p>
+        <p>«Нет, жизнь не кончена в 31 год, – вдруг окончательно, беспеременно решил князь Андрей...</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Asperiores assumenda dicta, dolores
+            illo labore pariatur porro quasi quia rerum ullam unde voluptate. Animi at consequuntur dolorem enim eos,
+            eum molestiae necessitatibus odio odit omnis quia recusandae tempora voluptas! Adipisci beatae cumque dolorem earum et,
+            inventore nulla quidem voluptatibus. Enim, laboriosam.</p>
+        <h5>Запрет обтекания</h5>
+            <img src="image/tesla.jpg" alt="tesla" width="350px" height="250px" class="image2">
+            <div class="footer" title="clear">Copyright © MyCorp. 2022</div>
+    </div>
+    <h4>Прокрутка элементов</h4>
+    <div class="overflow" title="overflow">
+        <div class="article1" title="overflow-auto">
+            <p>Старый дуб, весь преображенный, раскинувшись шатром сочной, темной зелени, млел, чуть
+                колыхаясь в лучах вечернего солнца. Ни корявых пальцев, ни болячек, ни старого недоверия и
+                горя – ничего не было видно. Да, это тот самый дуб», – подумал князь
+                Андрей, и на него вдруг нашло беспричинное весеннее чувство радости и обновления.</p>
+        </div>
+        <div class="article2" title="overflow-hidden">
+            <p>Старый дуб, весь преображенный, раскинувшись шатром сочной, темной зелени, млел, чуть
+                колыхаясь в лучах вечернего солнца. Ни корявых пальцев, ни болячек, ни старого недоверия и
+                горя – ничего не было видно. Да, это тот самый дуб», – подумал князь
+                Андрей, и на него вдруг нашло беспричинное весеннее чувство радости и обновления.</p>
+        </div>
+    </div>
+
+
+
+
 </body>
 
 </html>
