linear gradient in CSS3

--- a/index.html
+++ b/index.html
@@ -360,8 +360,14 @@
                 Андрей, и на него вдруг нашло беспричинное весеннее чувство радости и обновления.</p>
         </div>
     </div>
+    <h4>Линейный градиент</h4>
+    <div title="linear-gradient" class="linear_gradient">
+        <div class="prim1"><p>Линейный черно-белый градиент</p></div>
+        <div class="prim2"><p>Линейный черно-белый градиент</p></div>
+        <div class="prim3"><p>Линейный черно-белый градиент</p></div>
+        <div class="prim4" title="repeating-linear-gradient"><p>Линейный черно-белый градиент</p></div>
 
-
+    </div>
 
 
 </body>
